commit before major model shift

--- a/mysite/bower.json
+++ b/mysite/bower.json
@@ -13,6 +13,8 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "metisMenu": "metismenu#^2.7.0"
+    "metisMenu": "metismenu#^2.7.0",
+    "datatables.net": "^1.10.15",
+    "datatables.net-dt": "^3.2.2"
   }
 }
